3. Searchparams with back navigation

--- a/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/memo-list.component.html
@@ -113,7 +113,7 @@
                 </thead>
 
                 <tbody>
-                <tr *ngFor = "let memo of memoList">
+                <tr *ngFor = "let memo of memoList" style="cursor: pointer" (click)="navigate(memo.memoType, memo.id)">
                     <td width="5%">{{getMemoTypeName(memo.memoType)}}</td>
                     <td width="10%" >{{memo.meetingType}}</td>
                     <td width="30%"><a style="cursor: pointer" (click)="navigate(memo.memoType, memo.id)">{{memo.firmName}}</a></td>
