--- a/nicnbk-ui-angular2/src/app/hf/view/hf.manager-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/hf/view/hf.manager-profile.component.html
@@ -348,10 +348,10 @@
                             </thead>
 
                             <tbody>
-                            <tr *ngFor = "let memo of memoList">
+                            <tr *ngFor = "let memo of memoList" style="cursor: pointer" (click)="navigate(memo.memoType, memo.id)">
                                 <td width="10%" >{{memo.meetingType}}</td>
-                                <td width="30%"><a [routerLink]="['/m2s2/edit/', memo.memoType, memo.id]">{{memo.firmName}}</a></td>
-                                <td width="30%"><a [routerLink]="['/m2s2/edit/', memo.memoType, memo.id]">{{memo.fundName}}</a></td>
+                                <td width="30%"><a style="cursor: pointer" (click)="navigate(memo.memoType, memo.id)">{{memo.firmName}}</a></td>
+                                <td width="30%"><a style="cursor: pointer" (click)="navigate(memo.memoType, memo.id)">{{memo.fundName}}</a></td>
                                 <!--<td width="10%" th:text="${memoItem.meetingDate}"></td>-->
                                 <td width="10%">{{memo.meetingDate}}</td>
                                 <td width="10%">{{memo.author}}</td>
