--- a/nicnbk-ui-angular2/src/app/m2s2/view/general-memo-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/general-memo-edit.component.html
@@ -139,10 +139,10 @@
                     </div>
 
                     <div class="row top-buffer withpadding">
-                        <div class="col-md-12" style="background-color:#5bc0de;">
+                        <div class="col-md-12" style="background-color:#5bc0de; height: 34px">
                             <div>
                                 <div class="col-md-6">
-                                    <span>TOPIC 1</span>
+                                    <h5>TOPIC 1</h5>
                                 </div>
                                 <div class="col-md-5">&nbsp;</div>
                             </div>
@@ -154,9 +154,9 @@
                         </div>
                     </div>
                     <div class="row top-buffer withpadding">
-                        <div class="col-md-12" style="background-color:#5bc0de;">
+                        <div class="col-md-12" style="background-color:#5bc0de; height: 34px">
                             <div class="col-md-6">
-                                <span>TOPIC 2</span>
+                                <h5>TOPIC 2</h5>
                             </div>
                             <div class="col-md-6">&nbsp;</div>
                         </div>
@@ -167,9 +167,9 @@
                         </div>
                     </div>
                     <div class="row top-buffer withpadding">
-                        <div class="col-md-12" style="background-color:#5bc0de;">
+                        <div class="col-md-12" style="background-color:#5bc0de; height: 34px">
                             <div class="col-md-6">
-                                <span>TOPIC 3</span>
+                                <h5>TOPIC 3</h5>
                             </div>
                             <div class="col-md-6">&nbsp;</div>
                         </div>
@@ -180,9 +180,9 @@
                         </div>
                     </div>
                     <div class="row top-buffer withpadding">
-                        <div class="col-md-12" style="background-color:#5bc0de;">
+                        <div class="col-md-12" style="background-color:#5bc0de; height: 34px">
                             <div class="col-md-2">
-                                <span>OTHER INFO</span>
+                                <h5>OTHER INFO</h5>
                             </div>
                             <div class="col-md-10">&nbsp;</div>
                         </div>
@@ -193,9 +193,9 @@
                         </div>
                     </div>
                     <div class="row top-buffer withpadding">
-                        <div class="col-md-12" style="background-color:#5bc0de;">
+                        <div class="col-md-12" style="background-color:#5bc0de; height: 34px">
                             <div class="col-md-2">
-                                <span>FOLLOW-UPS</span>
+                                <h5>FOLLOW-UPS</h5>
                             </div>
                             <div class="col-md-10">&nbsp;</div>
                         </div>
