--- a/nicnbk-ui-angular2/src/app/m2s2/view/general-memo-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/general-memo-edit.component.html
@@ -252,11 +252,12 @@
                         </div>
 
                         <div class="col-md-6">
-                            <label class="col-md-2">Author:</label>
-                            <div class="col-md-4">
-                                <input type="text" placeholder="Your name... " class="form-control col-md-4" id="author"
-                                       name="author" maxlength="250" name="author" [(ngModel)]="memo.author"/>
-                            </div>
+                            <label class="control-label col-md-6" >Author: {{memo.owner}}</label>
+                            <!--<div class="col-md-4">-->
+                                <!--&lt;!&ndash;<input type="text" placeholder="Your name... " class="form-control col-md-4" id="author"&ndash;&gt;-->
+                                       <!--&lt;!&ndash;name="author" maxlength="250" name="author" [(ngModel)]="memo.author"/>&ndash;&gt;-->
+                                <!--<span>{{memo.owner}}</span>-->
+                            <!--</div>-->
                         </div>
 
                         <div class="col-md-12">
