--- a/nicnbk-ui-angular2/src/app/m2s2/view/pe-memo-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/m2s2/view/pe-memo-edit.component.html
@@ -571,12 +571,13 @@
 
                         <div class="col-md-6">
                             <div class="form-group form-horizontal">
-                            <label class="control-label col-md-2" for="author">Author:</label>
-                            <div class="col-md-4">
-                                <input type="text" placeholder="Your name... " class="form-control col-md-4" id="author"
-                                       name="author" maxlength="250" name="author" [(ngModel)]="memo.author"/>
+                                <label class="control-label col-md-6" >Author: {{memo.owner}}</label>
+                            <!--<div class="col-md-4">-->
+                                <!--&lt;!&ndash;<input type="text" placeholder="Your name... " class="form-control col-md-4" id="author"&ndash;&gt;-->
+                                <!--&lt;!&ndash;name="author" maxlength="250" name="author" [(ngModel)]="memo.author"/>&ndash;&gt;-->
+                                <!--<span>{{memo.owner}}</span>-->
+                            <!--</div>-->
                             </div>
-                                </div>
                         </div>
 
                         <div class="col-md-12">
